@@ -15,8 +15,11 @@ schroot (1.2.1-1) unstable; urgency=low
     - Update vi translation (Closes: #479750).  Thanks to Clytie Siddall.
     - Add zh_CN translation (Closes: #480174).  Thanks to LI Daobing (李道兵).
     - Update zh_CN translation.  Thanks to Ji ZhengYu.
+  * sbuild/sbuild-lock.cc: Order of "struct flock" members is not assumed,
+    for GNU/kFreeBSD portability (Closes: #485637).  Thanks to Petr
+    Salinger.
 
- -- Roger Leigh <rleigh@debian.org>  Mon, 19 May 2008 23:27:21 +0100
+ -- Roger Leigh <rleigh@debian.org>  Sun, 29 Jun 2008 16:41:02 +0100
 
 schroot (1.2.0-1) unstable; urgency=low
 
